<resources>
    <string name="app_name">Flack</string>

    <!-- ServerInputActivity -->
    <string name="text_srvinput_btn_connect">Connect</string>
    <string name="text_srvinput_tv_introtext">Enter instance address.</string>
    <string name="placeholder_srvinput_et_address">192.168.86.29</string>

    <!-- AuthActivity -->
    <string name="text_auth_tv_introtext">To start chatting, login or register.</string>
    <string name="text_auth_tv_loginheading">LOGIN</string>
    <string name="placeholder_auth_et_username">Username</string>
    <string name="placeholder_auth_et_password">Password</string>
    <string name="text_auth_btn_login">Log in</string>
    <string name="text_auth_btn_register">Register</string>
    <string name="text_auth_tv_registerheading">REGISTER</string>

    <!-- RoomActivity -->
    <string name="title_room_activitylabel">Rooms</string>
    <string name="text_room_tv_norooms">No rooms yet. Create one or wait for
        your friends to add you.</string>

    <!-- MessageActivity -->
    <string name="text_message_tv_nomessages">No messages here yet. Be the first one to send something!</string>

    <!-- FileActivity -->
    <string name="title_file_activitylabel">Files</string>
    <string name="text_file_tv_nofiles">No uploaded files so far. Try reloading if you uploaded files from another device.</string>

    <!-- FilePickActivity -->
    <string name="text_filepick_tv_nofiles">@string/text_file_tv_nofiles</string>

    <!-- RoomCreateActivity -->
    <string name="text_roomcreate_tv_norooms">No other users yet. Invite your friends to join Flack!</string>
</resources>
